<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@mipmap/background3_foreground"
        android:scaleType="centerCrop"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:background="#d8000000">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="@drawable/circulo_image"
                android:src="@mipmap/logo2nob_foreground"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/white"
                android:text="@string/tvNameLabel"/>
            <EditText
                android:id="@+id/etNames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/etHintName"
                android:background="@drawable/rounded_corner"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:minHeight="48dp"
                android:layout_marginBottom="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/white"
                android:text="@string/tvLastNameLabel"/>
            <EditText
                android:id="@+id/etLastNames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/etHintLastname"
                android:background="@drawable/rounded_corner"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:minHeight="48dp"
                android:layout_marginBottom="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/white"
                android:text="@string/tvDocumentTypeLabel"
                />
            <Spinner
                android:id="@+id/spDocumentType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:minHeight="48dp"
                android:layout_marginBottom="20dp"
                android:entries="@array/spDocumentType"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/white"
                android:text="@string/tvDocumentNumberLabel"/>
            <EditText
                android:id="@+id/etDocumentNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_corner"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:minHeight="48dp"
                android:hint="@string/etHintDocumentNumber"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/white"
                android:text="@string/tvAddress"/>
            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_corner"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:minHeight="48dp"
                android:hint="@string/etHintAddress"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/white"
                android:text="@string/tvEmailLabel"/>
            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_corner"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:minHeight="48dp"
                android:hint="@string/etHintEmail"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/white"
                android:text="@string/tvPhoneLabel"/>
            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_corner"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:minHeight="48dp"
                android:hint="@string/etHintPhone"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/white"
                android:text="@string/tvPasswordLabel"/>
            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:minHeight="48dp"
                android:layout_marginBottom="10dp"
                android:inputType="textPassword"
                android:hint="@string/etHintPassword"/>
            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:minHeight="48dp"
                android:inputType="textPassword"
                android:hint="@string/etHintConfirmpass"/>
            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="5dp"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:text="@string/tvRegisterLogin"
                android:textColor="@color/blue1"/>
            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="@color/blue3"
                android:text="@string/btnRegistro"/>

            <Button
                android:id="@+id/btnReturnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="30dp"
                android:backgroundTint="@color/blue3"
                android:text="@string/btnReturn"/>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>