<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@mipmap/background3_foreground"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top"
        android:background="#d8000000"
        >
        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:src="@mipmap/logo2nob_foreground"
            android:background="@drawable/circulo_image"
            />
        <TextView
            android:id="@+id/tvLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/white"
            android:text="@string/tvEmailLabel"/>
        <EditText
            android:id="@+id/etLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:minHeight="48dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/etHintEmail"
            />
        <TextView
            android:id="@+id/tvLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/white"
            android:text="@string/tvPasswordLabel"/>
        <EditText
            android:id="@+id/etLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/etHintPassword"
            android:inputType="textPassword"
            android:minHeight="48dp"
            />
        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/tvForgotPassword"
            android:clickable="true"
            android:textColor="@color/blue1"
            android:padding="10dp"
            android:minHeight="48dp"/>
        <TextView
            android:id="@+id/tvLoginRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/tvLoginRegister"
            android:clickable="true"
            android:textColor="@color/blue1"
            android:minHeight="48dp"
            android:padding="10dp"/>
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:textSize="16dp"
            android:backgroundTint="@color/blue3"
            android:layout_marginBottom="20dp"
            android:text="@string/btnLogin"/>
        <Button
            android:id="@+id/btnReturnLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:textSize="16dp"
            android:backgroundTint="@color/blue3"
            android:layout_marginBottom="30dp"
            android:text="@string/btnReturn"/>
    </LinearLayout>
</RelativeLayout>