<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.editProfile">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/logonob_foreground"/>
                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="30dp"/>
                <ImageView
                    android:id="@+id/profileReturn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="15dp"
                    android:scaleType="fitXY"
                    android:layout_gravity="center"
                    android:src="@drawable/volver"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textStyle="bold"
                android:textSize="30dp"
                android:textColor="@color/black"
                android:layout_marginLeft="20dp"
                android:text="@string/tvUserData"/>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:padding="20dp">
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/grey"
                    app:cardCornerRadius="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="10dp">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                android:paddingBottom="5dp"
                                android:text="@string/tvNameLabel"/>
                            <EditText
                                android:id="@+id/etPutName"
                                android:hint="@string/etHintName"
                                android:layout_width="match_parent"
                                android:layout_height="48dp"
                                android:background="@drawable/rounded_corner"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                android:paddingBottom="5dp"
                                android:text="@string/tvLastNameLabel"/>
                            <EditText
                                android:id="@+id/etPutLastname"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:minHeight="48dp"
                                android:hint="@string/etHintLastname"
                                android:background="@drawable/rounded_corner"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="10dp">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                android:paddingBottom="5dp"
                                android:text="@string/tvDocumentTypeLabel"/>
                            <Spinner
                                android:id="@+id/spPutDocumentType"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/rounded_corner"
                                android:minHeight="48dp"
                                android:entries="@array/spDocumentType"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="10dp">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                android:paddingBottom="5dp"
                                android:text="@string/tvDocumentNumberLabel"/>
                            <EditText
                                android:id="@+id/etPutDocnumber"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:minHeight="48dp"
                                android:hint="@string/etHintDocumentNumber"
                                android:background="@drawable/rounded_corner"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="10dp">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                android:paddingBottom="5dp"
                                android:text="@string/tvEmailLabel"/>
                            <EditText
                                android:id="@+id/etPutEmail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:minHeight="48dp"
                                android:hint="@string/etHintEmail"
                                android:background="@drawable/rounded_corner"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="10dp">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                android:paddingBottom="5dp"
                                android:text="@string/tvPhoneLabel"/>
                            <EditText
                                android:id="@+id/etPutPhone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/etHintPhone"
                                android:minHeight="48dp"
                                android:background="@drawable/rounded_corner"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="10dp">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                android:paddingBottom="5dp"
                                android:text="@string/tvAddress"/>
                            <EditText
                                android:id="@+id/etPutAddress"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:minHeight="48dp"
                                android:hint="@string/etHintAddress"
                                android:background="@drawable/rounded_corner"/>
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </ScrollView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="30dp"
                android:paddingRight="30dp">
                <Button
                    android:id="@+id/btnUpdate"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:text="@string/tvUserUpdate"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:backgroundTint="@color/blue3"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/btnSave"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/blue3"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:text="@string/tvUserSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/btnCancelSave"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:text="@string/tvUserCancel"
                    android:backgroundTint="@color/blue3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>






</FrameLayout>