<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forgotpassword">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="30dp">
        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@mipmap/logonob_foreground"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvForgot"/>
        <EditText
            android:id="@+id/etEmailForgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_colored_corners"
            android:minHeight="48dp"
            android:layout_marginTop="10dp"
            android:hint="@string/etHintEmail"/>
        <TextView
            android:id="@+id/tvSent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"/>
        <Button
            android:id="@+id/btnSend"
            android:layout_margin="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue3"
            android:text="@string/btnSend"/>
        <Button
            android:id="@+id/btnReturnForgot"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue3"
            android:text="@string/btnReturn"/>
    </LinearLayout>
</RelativeLayout>